# metagraph

./: LICENSE  README.md  metagraph.cabal  metagraph.sublime-project  stack.yaml
src/Data/: Metagraph.hs
src/Data/Metagraph/: Builder.hs  Graphviz.hs  Impl.hs  Lazy.hs  Strict.hs
src/Data/Metagraph/Internal/: Types.hs
test/: Tests.hs
