name:                metagraph
version:             0.1.0.0
synopsis:            Library for metagraph data structure.
description:         Please see README.md
homepage:            https://github.com/ncrashed/metagraph#readme
license:             BSD3
license-file:        LICENSE
author:              NCrashed
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Metagraph
    Data.Metagraph.Graphviz
    Data.Metagraph.Impl
    Data.Metagraph.Strict
  build-depends:
      base >= 4.7 && < 5
    , hashable >= 1.2.4.0
    , unordered-containers >= 0.2.5.1
    , lens >= 4.13
    , graphviz >= 2999.18.1.0
    , text >= 1.2.2

  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Tests.hs
  build-depends:       base >= 4.7 && < 5,
                       metagraph
  hs-source-dirs:      tests

source-repository head
  type:     git
  location: https://github.com/ncrashed/metagraph
