name:                metagraph
version:             0.1.0.0
synopsis:            Pure data structure to process metagraphs
-- description:
homepage:            https://github.com/teaspot-studio/metagraph#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Metagraph
    Data.Metagraph.Builder
    Data.Metagraph.Internal.Types
    Data.Metagraph.Lazy
    Data.Metagraph.Strict
  build-depends:
      base       >= 4.7 && < 5
    , containers >= 0.5 && < 0.6
    , mtl        >= 2.2 && < 2.3
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    GeneralizedNewtypeDeriving

test-suite unit-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Tests.hs
  build-depends:
      base              >= 4.7  && < 5
    , metagraph
    , tasty             >= 0.11 && < 0.12
    , tasty-hunit       >= 0.9  && < 0.10
    , tasty-quickcheck  >= 0.8  && < 0.9
  hs-source-dirs: test

source-repository head
  type:     git
  location: https://github.com/teaspot-studio/metagraph
